--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,7 +58,9 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.9f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\player\Feet.cs" />
     <Compile Include="Assets\Scripts\player\Cameramovement.cs" />
+    <Compile Include="Assets\Scripts\player\Arm.cs" />
     <Compile Include="Assets\Scripts\player\Movement.cs" />
   </ItemGroup>
   <ItemGroup>
