--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,12 +59,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\weapons\bowProjectile.cs" />
+    <Compile Include="Assets\Scripts\player\Dash\Afterimagepool.cs" />
     <Compile Include="Assets\Scripts\weapons\WeaponData.cs" />
     <Compile Include="Assets\Scripts\weapons\CollectWeapon.cs" />
     <Compile Include="Assets\Scripts\colliderawrg.cs" />
     <Compile Include="Assets\Scripts\player\Spells und Würfe\singlespellscripts\Spellmovement.cs" />
     <Compile Include="Assets\Scripts\Enemys\Basics\Enemyhealth.cs" />
-    <Compile Include="Assets\Scripts\player\Playerboost.cs" />
     <Compile Include="Assets\Scripts\player\Feet.cs" />
     <Compile Include="Assets\Scripts\player\Spells und Würfe\Spells.cs" />
     <Compile Include="Assets\Scripts\player\Attack.cs" />
@@ -73,6 +73,8 @@
     <Compile Include="Assets\Scripts\player\Cameramovement.cs" />
     <Compile Include="Assets\Scripts\player\Memory.cs" />
     <Compile Include="Assets\Scripts\player\Arm.cs" />
+    <Compile Include="Assets\Scripts\player\Dash\Afterimage.cs" />
+    <Compile Include="Assets\Scripts\player\Dash\Playerboost.cs" />
     <Compile Include="Assets\Scripts\player\Movement.cs" />
     <Compile Include="Assets\Scripts\player\Spells und Würfe\Spellobject.cs" />
   </ItemGroup>
