--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,15 +59,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\weapons\bowProjectile.cs" />
+    <Compile Include="Assets\Scripts\Enemys\Basics\Damageontouch.cs" />
     <Compile Include="Assets\Scripts\player\Dash\Afterimagepool.cs" />
     <Compile Include="Assets\Scripts\weapons\WeaponData.cs" />
     <Compile Include="Assets\Scripts\weapons\CollectWeapon.cs" />
-    <Compile Include="Assets\Scripts\colliderawrg.cs" />
     <Compile Include="Assets\Scripts\player\Spells und Würfe\singlespellscripts\Spellmovement.cs" />
     <Compile Include="Assets\Scripts\Enemys\Basics\Enemyhealth.cs" />
     <Compile Include="Assets\Scripts\player\Feet.cs" />
     <Compile Include="Assets\Scripts\player\Spells und Würfe\Spells.cs" />
     <Compile Include="Assets\Scripts\player\Attack.cs" />
+    <Compile Include="Assets\Scripts\Enemys\Basics\Moveenemy.cs" />
     <Compile Include="Assets\Scripts\player\Playerhealth.cs" />
     <Compile Include="Assets\Scripts\Enemys\Basics\Showdamagenumber.cs" />
     <Compile Include="Assets\Scripts\player\Cameramovement.cs" />
