--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Assets\UIswapWeapon.cs" />
     <Compile Include="Assets\Scripts\player\Memory.cs" />
     <Compile Include="Assets\Scripts\Instantiations\Player\Groundshockwave.cs" />
+    <Compile Include="Assets\Scripts\player\Spells und Würfe\Spelleffects.cs" />
     <Compile Include="Assets\Scripts\player\Dash\Afterimage.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextInfoDebugTool.cs" />
     <Compile Include="Assets\Scripts\player\Spells und Würfe\Spellobject.cs" />
